# CompileHW

./: README.md
assign1/ast-interpreter/: ASTInterpreter.cpp  CMakeCache.txt  CMakeLists.txt  Environment.h  Makefile  cmake_install.cmake  test00.c
assign2/: CMakeLists.txt  LLVMAssignment.cpp  test00.bc  test01.bc  test02.bc  test03.bc  test04.bc  test05.bc  test06.bc  test07.bc  test08.bc  test09.bc  test10.bc  test11.bc  test12.bc  test13.bc  test14.bc  test15.bc
assign2/assign2-tests/: test000.bc  test11.c
assign3/: CMakeLists.txt  Dataflow.h  FuncPtr.h  LLVMAssignment.cpp  Liveness.h  test00.bc  test01.bc  test02.bc  test03.bc  test04.bc  test06.bc  test07.bc  test08.bc  test09.bc  test10.bc  test11.bc  test12.bc  test13.bc  test14.bc  test15.bc  test16.bc  test17.bc  test18.bc  test19.bc  test21.bc  test22.bc  test23.bc  test24.bc  test25.bc  test27.bc  test30.bc  test31.bc
